added lived in cities

--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Lecture Testing</title>
   </head>
   <body>
-
+    <ul>
+      <li>Berkeley</li>
+      <li>Boulder</li>
+      <li>Longmont</li>
+      <li>Sea of Tranquility - Moon</li>
+    </ul>
   </body>
 </html>
