added go-to cities

--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
     <title>Lecture Testing</title>
   </head>
   <body>
-    <ul>
+    <ol>
       <li>Berkeley</li>
       <li>Boulder</li>
       <li>Longmont</li>
+
+    </ol>
+
+
+    <ul>
+      <li>Okinawa - Japan</li>
+      <li>Zion - Utah</li>
       <li>Sea of Tranquility - Moon</li>
     </ul>
+
   </body>
 </html>
