--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <ol>
-      <li>Berkeley</li>
-      <li>Boulder</li>
-      <li>Longmont</li>
+      <li><span>Berkeley</span></li>
+      <li><span>Boulder</span></li>
+      <li><span>Longmont</span></li>
 
     </ol>
 
