added more  spans

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 
     <ul>
-      <li>Okinawa - Japan</li>
-      <li>Zion - Utah</li>
-      <li>Sea of Tranquility - Moon</li>
+      <li><span>Okinawa - Japan</span></li>
+      <li><span>Zion - Utah</span></li>
+      <li><span>Sea of Tranquility - Moon</span></li>
     </ul>
 
   </body>
