working with spans

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <title>Lecture Testing</title>
   </head>
   <body>
-    <ol>
-      <li><span>Berkeley</span></li>
-      <li><span>Boulder</span></li>
-      <li><span>Longmont</span></li>
+    <ol><span>
+      <li>Berkeley</li>
+      <li>Boulder</li>
+      <li>Longmont</li>
 
-    </ol>
+    </span></ol>
 
 
     <ul>
