--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <title>Lecture Testing</title>
   </head>
   <body>
-    <ol><span>
+    <ol>
       <li>Berkeley</li>
       <li>Boulder</li>
       <li>Longmont</li>
 
-    </span></ol>
+    </ol>
 
 
     <ul>
-      <li><span>Okinawa - Japan</span></li>
-      <li><span>Zion - Utah</span></li>
-      <li><span>Sea of Tranquility - Moon</span></li>
+      <li>Okinawa - Japan<span> Aqua Design Amano Gallery </span></li>
+      <li>Zion - Utah</li>
+      <li>Sea of Tranquility - Moon</li>
     </ul>
 
   </body>
