--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 
     <ul>
-      <li>Okinawa - Japan<span> Aqua Design Amano Gallery </span></li>
-      <li>Zion - Utah</li>
-      <li>Sea of Tranquility - Moon</li>
+      <li>Okinawa - Japan:<span> Aqua Design Amano Gallery </span></li>
+      <li>Zion - Utah:<span> Amazing natural scenery </span></li>
+      <li>Sea of Tranquility - Moon:<span> Unparalelled quietness and privacy + moon rocks</li>
     </ul>
 
   </body>
