--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <ul>
       <li>Okinawa - Japan:<span> Aqua Design Amano Gallery </span></li>
       <li>Zion - Utah:<span> Amazing natural scenery </span></li>
-      <li>Sea of Tranquility - Moon:<span> Unparalelled quietness and privacy + moon rocks</li>
+      <li>Sea of Tranquility - Moon:<span> Unparalelled quietness and privacy + moon rocks</span></li>
     </ul>
 
   </body>
