--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Lecture Testing</title>
   </head>
   <body>
+    <h1> Cities I've lived in </h1>
     <ol>
       <li>Berkeley</li>
       <li>Boulder</li>
@@ -12,7 +13,7 @@
 
     </ol>
 
-
+    <h1> Placed I'd like to live </h1>
     <ul>
       <li>Okinawa - Japan:<span> Aqua Design Amano Gallery </span></li>
       <li>Zion - Utah:<span> Amazing natural scenery </span></li>
