Added Yoda images

--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
 
     <h2> Placed I'd like to live </h2>
     <ul>
-      <li>Okinawa - Japan:<span> Aqua Design Amano Gallery </span></li>
+      <li><strong>Okinawa - Japan:</strong><span> Aqua Design Amano Gallery </span></li>
       <li>Zion - Utah:<span> Amazing natural scenery </span></li>
-      <li>Sea of Tranquility - Moon:<span> Unparalelled quietness and privacy + moon rocks</span></li>
+      <li><strong>Sea of Tranquility - Moon:</strong><span> Unparalelled quietness and privacy + moon rocks</span></li>
     </ul>
+
+    <img src="yoda.jpg" alt="yoda">
+
+
 
   </body>
 </html>
