modified image sizing

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <li><strong>Sea of Tranquility - Moon:</strong><span> Unparalelled quietness and privacy + moon rocks</span></li>
     </ul>
 
-    <img src="yoda.jpg" alt="yoda">
+    <img src="yoda.jpg" alt="yoda"
+          sizes="(min-width: 600px) 200px, 50vw">
 
 
 
