added kitty cats

--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
       <li><strong>Sea of Tranquility - Moon:</strong><span> Unparalelled quietness and privacy + moon rocks</span></li>
     </ul>
 
+    <img src="kitty_pancake.gif" alt="cute cat">
+
     <img src="yoda.jpg" alt="yoda"
           sizes="(min-width: 600px) 200px, 50vw">
+
+
 
 
 
